<resources>
    <string name="sign_in_with_password">Sign in with password</string>
    <string name="email_or_phone_number">Email or Phone Number</string>
    <string name="remember_me">Remember me</string>
    <string name="reset_password">Reset password</string>
    <string name="sign_in">Sign in</string>
    <string name="or_continue_with">or continue with</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="facebook">facebook</string>
    <string name="google">google</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="no_worries_you_need_to_type_your_email_address_or_phone_number_and_we_will_send_the_verification_code">No worries, you need to type your email address or phone number and we will send the verification code.</string>
    <string name="submit">Submit</string>
    <string name="facebook_app_id">158408210907657</string>
    <string name="fb_login_protocol_scheme">fb158408210907657</string>
    <string name="facebook_client_token">67021182dbe6a777555d51cdfd61f5a2</string>
    <string name="appname">ScsTrade Pro</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>