<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presenter.login.LoginFragment">

    <TextView
        android:id="@+id/sign_in_with_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_24dp"
        android:layout_marginTop="@dimen/_48dp"
        android:layout_marginEnd="@dimen/_24dp"
        android:text="@string/sign_in_with_password"
        android:textAppearance="@style/sign_in_with_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.scstradeapp.android.custom.TextField
        android:id="@+id/textFieldEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_24dp"
        android:layout_marginTop="@dimen/_64dp"
        android:layout_marginEnd="@dimen/_24dp"
        android:hint="@string/email_or_phone_number"
        android:inputType="text"
        android:textAppearance="@style/text_Field_Email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_with_password" />

    <com.example.scstradeapp.android.custom.TextField
        android:id="@+id/textFieldPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_24dp"
        android:layout_marginTop="@dimen/_24dp"
        android:layout_marginEnd="@dimen/_24dp"
        android:hint="********"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldEmail" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/remember_me"
        app:layout_constraintStart_toStartOf="@+id/textFieldPassword"
        app:layout_constraintTop_toBottomOf="@+id/textFieldPassword" />

    <TextView
        android:id="@+id/reset_password"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:text="@string/reset_password"
        android:textAppearance="@style/reset_password"
        app:layout_constraintBottom_toBottomOf="@+id/checkBox"
        app:layout_constraintEnd_toEndOf="@+id/textFieldPassword"
        app:layout_constraintTop_toTopOf="@+id/checkBox" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:background="@drawable/bg_button_sign_in"
        android:enabled="false"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="@+id/reset_password"
        app:layout_constraintStart_toStartOf="@+id/checkBox"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <TextView
        android:id="@+id/or_continue_with"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_96dp"
        android:layout_marginBottom="@dimen/_250dp"
        android:text="@string/or_continue_with"
        android:textAppearance="@style/or_continue_with"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <View
        android:id="@+id/viewleft"
        android:layout_width="0dp"
        android:layout_height="@dimen/_1dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:backgroundTint="@color/grey"
        app:layout_constraintBottom_toBottomOf="@+id/or_continue_with"
        app:layout_constraintEnd_toStartOf="@+id/or_continue_with"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toTopOf="@+id/or_continue_with" />

    <View
        android:id="@+id/viewRight"
        android:layout_width="0dp"
        android:layout_height="@dimen/_1dp"
        android:layout_marginStart="@dimen/_16dp"
        android:backgroundTint="@color/grey"
        app:layout_constraintBottom_toBottomOf="@+id/or_continue_with"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintStart_toEndOf="@+id/or_continue_with"
        app:layout_constraintTop_toTopOf="@+id/or_continue_with" />


    <TextView
        android:id="@+id/don_t_have_an_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_64dp"
        android:text="@string/don_t_have_an_account"
        android:textAppearance="@style/don_t_have_an_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/viewleft" />

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/_5dp"
        android:text="@string/sign_up"
        android:textAppearance="@style/sign_up"
        app:layout_constraintBottom_toBottomOf="@+id/don_t_have_an_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/don_t_have_an_account"
        app:layout_constraintTop_toTopOf="@+id/don_t_have_an_account" />
</androidx.constraintlayout.widget.ConstraintLayout>