<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presenter.forgotpassword.ForgotFragment">


    <TextView
        android:id="@+id/forgot_your_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_24dp"
        android:layout_marginTop="@dimen/_48dp"
        android:layout_marginEnd="@dimen/_24dp"
        android:text="@string/forgot_your_password"
        android:textAppearance="@style/forgot_your_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/no_worries_you_need_to_type_your_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24dp"
        android:layout_marginEnd="@dimen/_24dp"
        android:text="@string/no_worries_you_need_to_type_your_email_address_or_phone_number_and_we_will_send_the_verification_code"
        android:textAppearance="@style/no_worries_you_need_to_type_your_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/forgot_your_password"
        app:layout_constraintTop_toBottomOf="@+id/forgot_your_password" />

    <com.example.scstradeapp.android.custom.TextField
        android:id="@+id/textField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:hint="@string/email_or_phone_number"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/no_worries_you_need_to_type_your_email"
        app:layout_constraintStart_toStartOf="@+id/no_worries_you_need_to_type_your_email"
        app:layout_constraintTop_toBottomOf="@+id/no_worries_you_need_to_type_your_email" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:text="@string/submit"
        android:enabled="false"
        android:textAppearance="@style/button_submit"
        android:background="@drawable/bg_button_sign_in"
        app:layout_constraintEnd_toEndOf="@+id/textField"
        app:layout_constraintStart_toStartOf="@+id/textField"
        app:layout_constraintTop_toBottomOf="@+id/textField" />
</androidx.constraintlayout.widget.ConstraintLayout>